testsuite/tests/parser/should_fail/pfail047.alan
char_error() : proc
  b : byte;
{
  b = 'ab';
}
